--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -10,3 +10,4 @@ threads = $(THREADS)
 enable-threads = True
 log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(rsize) "%(referer)" "%(uagent)" %(secs)/%(micros) %(cl) %(size) "%(var.HTTP_X_FORWARDED_FOR)"
 procname-prefix = uwsgi
+pidfile = /tmp/myapp.pid
