--- a/src/uwsgi_g.ini
+++ b/src/uwsgi_g.ini
@@ -11,3 +11,4 @@ gevent-monkey-patch = $(GEVENT)
 enable-threads = True
 log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(rsize) "%(referer)" "%(uagent)" %(secs)/%(micros) %(cl) %(size) "%(var.HTTP_X_FORWARDED_FOR)"
 procname-prefix = uwsgi
+pidfile = /tmp/myapp.pid
