--- a/uwsgi-gevent-buster/Dockerfile
+++ b/uwsgi-gevent-buster/Dockerfile
@@ -3,6 +3,8 @@ LABEL maintainer="s8901489@gmail.com"
 
 WORKDIR /root
 
-RUN pip install --upgrade pip \
-    && pip install --no-cache-dir uwsgi gevent flask\
+RUN apt-get update \
+    && apt-get install -y netcat \
+    && pip install --upgrade pip \
+    && pip install --no-cache-dir uwsgi gevent flask boto3 pytest\
     && rm -rf /tmp/*
