--- a/src/uwsgi_g.ini
+++ b/src/uwsgi_g.ini
@@ -12,3 +12,5 @@ enable-threads = True
 log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(rsize) "%(referer)" "%(uagent)" %(secs)/%(micros) %(cl) %(size) "%(var.HTTP_X_FORWARDED_FOR)"
 procname-prefix = uwsgi
 pidfile = /tmp/myapp.pid
+; req-logger = file:/var/log/request.log
+; logger = file:/var/log/logger.log
