--- a/uwsgi-gevent-buster/Dockerfile
+++ b/uwsgi-gevent-buster/Dockerfile
@@ -6,5 +6,5 @@ WORKDIR /root
 RUN apt-get update \
     && apt-get install -y netcat \
     && pip install --upgrade pip \
-    && pip install --no-cache-dir uwsgi gevent flask boto3 pytest\
+    && pip install --no-cache-dir uwsgi gevent flask boto3 pytest simplejson\
     && rm -rf /tmp/*
