--- a/uwsgi-gevent-slim/Dockerfile
+++ b/uwsgi-gevent-slim/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update \
     && apt-get install gcc -y \
     && apt-get clean \
     && pip install --upgrade pip \
-    && pip install --no-cache-dir uwsgi gevent flask\
+    && pip install --no-cache-dir uwsgi gevent flask boto3 pytest simplejson\
     && rm -rf /tmp/* \
     && apt-get remove -y gcc
 
